--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -62,7 +62,7 @@ Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo de Herbrand, ent
 >Sea $S$ un conjunto finito de cláusulas y $\mathscr{H}_S$ su universo de Herbrand entonces $S$ es insatisfacible si y solo si algún subconjunto finito de $\mathscr{H}_S((S))$ es incosistente.
 >En términos computacionales este teorema sugiere un método para verificar la satisfabilidad de un conjunto de cláusulas. Es posible generar de manera parcial, de forma iterativa aplicando $\Re$, el universo de Herbrand y realizar las correspondientes substituciones para obtener parte de la expansión de Herbrand, si fuera inconsistente entonces $S$ sería insatisfacible.
 ## Significado en el Cálculo de Predicados
-Sea $P$ un programa lógico. El significado de $P$, denotado como $M(P)$, es un conjunto de metas fijas deducibles de $P$. A partir de esta definición se obtiene que si un programa lógico $P$ solo contiene hechos si significado es el mismo $P$.
+Sea $P$ un programa lógico. El significado de $P$, denotado como $M(P)$, es un conjunto de metas fijas deducibles de $P$. A partir de esta definición se obtiene que si un programa lógico $P$ solo contiene hechos su significado es el mismo $P$.
 Si el programa $P$ contiene alguna regla se presenta el problema de verificar si los literales en su cuerpo están en $M(P)$, si el cuerpo de la regla se encuentra en el significado entonces la cabeza debe estarlo. Así se puede afirmar que el significado de un programa $P$ contiene de forma explícita lo que el programa establece de forma explícita e implícita.
 Dado un programa $P$, podemos decir que el significado buscado de $P$ también es un conjunto de metas. Se espera que tales metas tengan respuestas positivas cuando se consulte a $P$ por esas metas.
 Es interesante preguntarse cuál es la relación entre el significado buscado de un programa $P$ y el significado real, $M(P)$. De manera informal decimos que un programa $P$ es correcto si el significado buscado de $P$ incluye al significado real $M(P)$. De forma similar diremos que el programa $P$ es completo si el significado real $M(P)$ incluye al significado buscado. La situación deseada es que el significado buscado y el significado real de un programa lógico $P$ coincidan, es decir que el programa sea tanto correcto como completo.
@@ -74,7 +74,7 @@ Sea $\mathbb{L}$ un lenguaje de primer orden. Una interpretación de Herbrand de
 - Si $p$ es una letra predicativa n-aria en $\mathbb{L}$ se le asigna un subconjunto de $\mathscr{H}_\mathbb{L}^n$, es decir, el conjunto de todas las n-tuplas de elementos de $\mathscr{H}_\mathbb{L}$. El significado de $p$ es el conjunto de n-tuplas $\{(t_2, t_2, \dots, t_n) \in \mathscr{H}_\mathbb{L}^n \ / \ \mathscr{I} \vDash p(t_2, t_2, \dots, t_n)\}$, es decir, las tuplas $(t_2, t_2, \dots, t_n)$ de $\mathscr{H}_\mathbb{L}^n$ tales que la interpretación $\mathscr{I}$ hace verdadera a $p(t_2, t_2, \dots, t_n)$.
 
 Dado un conjunto de fórmulas cerradas $S$, los elementos lingüísticos involucrados en sus cláusulas, es decir, sus constantes, letras funcionales y predicativas, definen un lenguaje particular que se denomina el lenguaje de $S$.
-Sea $S$ un conjunto de fórmulas cerradas. Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que es un modelo de $S$. Dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
+Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que es un modelo de $S$. Dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
 Dado un programa $P$, es posible identificar una interpretación de Herbrand de P con un subconjunto de los elementos de la Base de Herbrand de $P$. Dada una interpretación de Herbrand arbitraria $\mathscr{I}$ entonces el subconjunto de $\mathscr{B}_P$ correspondiente a esa interpretación, es el subconjunto de átomos fijos que son verdaderos en la interpretación $\mathscr{I}$.
 Recíprocamente, dado un subconjunto arbitrario de $\mathscr{B}_P$ existe la correspondiente interpretación de Herbrand definida especificando que el mapeo asignado a una letra predicativa mapea una tupla de forma correcta, si el átomo con la misma letra predicativa y los mismos argumentos está en el subconjunto.
 Sea $P$ un programa definido y sea $\{M_i\}_{i \in \mathscr{I}}$ un conjunto no vacío de modelos de Herbarnd de $P$, entonces:
