Completando y puliendo la unidad 5 | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -3,11 +3,10 @@ $$A \leftarrow B_1, B_2, \dots, B_n$$
 La cual contiene exactamente un átomo en su consecuente, en este caso el literal $A$. Nótese que en este caso la cláusula en cuestión es una cláusula de Horn.
 Un programa definido es un conjunto de cláusulas de programa definido, por otro lado, una ***meta definida*** es una cláusula cuyo consecuente está vacío, es decir, no posee un consecuente:
 $$\leftarrow B_1, B_2, \dots, B_n$$
-Este tipo de cláusulas suelen recibir el nombre de consultas o cláusulas objetivo. Nótese que en este caso también estamos en presencia de una cláusula de Horn.
-Estas metas definidas son equivalentes a $¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n$ y en ellas se asume que todas las variables de las cláusulas están cuantificadas universalmente:
+Este tipo de cláusulas suelen recibir el nombre de consultas o cláusulas objetivo. En este caso también estamos en presencia de una cláusula de Horn. Estas metas definidas son equivalentes a $¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n$ y de ellas se asume que todas las variables de las cláusulas están cuantificadas universalmente:
 $$\forall(¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n)$$
 Usando la notación abreviada que da la cuantificación universal de las variables, esa expresión es equivalente a $\forall¬(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ que a su vez es equivalente a $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$.
-Los sistemas que utilizan programación en lógica están basados en la regla de resolución como única regla de inferencia. Esto significa que sí se trata de probar que $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de un programa $P$, se niega esa fórmula obteniendo una meta definida $\leftarrow B_1, B_2, \dots, B_n$, la cual definimos con anterioridad.
+Los sistemas que utilizan programación en lógica están basados en la regla de resolución como única regla de inferencia. Esto significa que sí se trata de probar que $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de un programa $P$, se niega esa fórmula obteniendo una meta definida $\leftarrow B_1, B_2, \dots, B_n$, la cual vimos con anterioridad.
 Esta meta definida se agrega al programa $P$ y se trata de refutar el conjunto. En caso de que esto sea posible encontrar una refutación podemos afirmar que la fórmula $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de $P$. Observemos que esta meta está representada como una conjunción de literales que puede pensarse como una conjunción de submetas.
 Dada una meta $G$ de la forma $\leftarrow B_1, B_2, \dots, B_n$, equivalente a la siguiente expresión $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ y un programa $P$. No solo resulta interesante saber que $P \cup G$ es insatisfacible, es decir, $¬G$ es consecuencia lógica de $P$. Si no que dado un conjunto de variables $y_1, y_2, \dots, y_n$, las cuales están ligadas al resolver la consulta, es interesante obtener las instanciaciones de esas variables que permiten obtener la refutación, dado que estas representarán la respuesta del programa a la meta definida o consulta.
 ## Selección Lineal de Programas Definidos (SLD)
@@ -45,14 +44,14 @@ Prolog utiliza búsqueda en profundidad, ya que la implementación es más senci
 En la lógica, un conjunto de cláusulas puede ser verdadera o falsa independiente del orden en el que estas se evalúen. En Prolog el programador se ve obligado a pensar en términos del control de ejecución de sus programas ordenando cuidadosamente las cláusulas y literales con el fin de evitar ejecuciones no terminantes, dado que las cláusulas se seleccionan de arriba abajo y los átomos de las metas de izquierda a derecha.
 Otra diferencia es que Prolog incluye predicados de E/S, aritméticos y de corte que recorta el árbol SLD. Este último realmente afecta la estrategia de evaluación en los programas, y su uso pone en cuestión el carácter auténticamente declarativo del lenguaje.
 ## Semántica de los Programas Lógicos
-Dado un conjunto de cláusulas $S$, definimos el ***Universo o Dominio de Herbrand*** de $S$ como el conjunto de términos $\mathscr{H}_S$ obtenidos a partir de $S$ de la siguiente manera:
+Dado un conjunto de cláusulas $S$, definimos el ***Universo o Dominio de Herbrand*** de $S$ como el conjunto de términos fijos $\mathscr{H}_S$ obtenidos a partir de $S$ de la siguiente manera:
 1. Si $a$ es una constante que aparece en $S$ entonces $a$ pertenece a $\mathscr{H}_S$. Si $S$ no contuviera constantes se agrega una arbitraria.
 2. Si $t_2, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$ y $f^n_k$ es una letra funcional n-aria que pertenece a $S$ entonces $f_k^n(t_2, t_2, \dots, t_n)$ pertenece a $\mathscr{H}_S$.
 
 >[!caution] Universo de Herbrand Infinito
->El universo o dominio de Herbrand pueden ser finitos, pero si en $S$ existe al menos una letra funcional, entonces el universo de Herbrand es infinito. En caso de que se necesite ver un ejemplo ir a las filminas de la cátedra.
+>El universo o dominio de Herbrand pueden ser finitos, pero si en $S$ existe al menos una letra funcional en dicho conjunto el universo de Herbrand pasa a ser infinito. En caso de que se necesite ver un ejemplo ir a las filminas de la cátedra.
 
-Dado un conjunto de cláusulas $S$ definimos la ***Base de Herbrand*** de $S$, denotada como $\mathscr{B}_S$, como el conjunto de literales siguiente:
+Dado un conjunto de cláusulas $S$ definimos la ***Base de Herbrand*** de $S$, denotada como $\mathscr{B}_S$, como el conjunto de átomos fijos conformado por los siguientes componentes:
 $$\mathscr{B}_S = \{p_k^n(t_2, t_2, \dots, t_n)\}$$
 Donde $p_k^n$ es una letra predicativa n-aria perteneciente a $S$ y $t_2, t_2, \dots, t_n$ son términos en $\mathscr{H}_S$. La base de Herbrand va a ser infinita si el universo de Herbrand es infinito.
 ### Saturación y Expansión de Herbrand
@@ -60,7 +59,7 @@ Dado un conjunto de cláusulas $S$ y un conjunto $P$ de términos fijos, entonce
 Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo de Herbrand, entonces la saturación de $S$ sobre $\mathscr{H}_S$, es decir $\mathscr{H}_S((S))$, se denomina ***Expansión de Herbrand*** de $S$.
 >[!tldr] Teorema de Herbrand
 >Sea $S$ un conjunto finito de cláusulas y $\mathscr{H}_S$ su universo de Herbrand entonces $S$ es insatisfacible si y solo si algún subconjunto finito de $\mathscr{H}_S((S))$ es incosistente.
->En términos computacionales este teorema sugiere un método para verificar la satisfabilidad de un conjunto de cláusulas. Es posible generar de manera parcial, de forma iterativa aplicando $\Re$, el universo de Herbrand y realizar las correspondientes substituciones para obtener parte de la expansión de Herbrand, si fuera inconsistente entonces $S$ sería insatisfacible.
+>En términos computacionales este teorema sugiere un método para verificar la satisfabilidad de un conjunto de cláusulas. Es posible generar de manera parcial, de forma iterativa aplicando el operador $\Re$, el universo de Herbrand y realizar las correspondientes substituciones para obtener parte de la expansión de Herbrand, si fuera inconsistente entonces $S$ sería insatisfacible.
 ## Significado en el Cálculo de Predicados
 Sea $P$ un programa lógico. El significado de $P$, denotado como $M(P)$, es un conjunto de metas fijas deducibles de $P$. A partir de esta definición se obtiene que si un programa lógico $P$ solo contiene hechos su significado es el mismo $P$.
 Si el programa $P$ contiene alguna regla se presenta el problema de verificar si los literales en su cuerpo están en $M(P)$, si el cuerpo de la regla se encuentra en el significado entonces la cabeza debe estarlo. Así se puede afirmar que el significado de un programa $P$ contiene de forma explícita lo que el programa establece de forma explícita e implícita.
@@ -74,8 +73,8 @@ Sea $\mathbb{L}$ un lenguaje de primer orden. Una interpretación de Herbrand de
 - Si $p$ es una letra predicativa n-aria en $\mathbb{L}$ se le asigna un subconjunto de $\mathscr{H}_\mathbb{L}^n$, es decir, el conjunto de todas las n-tuplas de elementos de $\mathscr{H}_\mathbb{L}$. El significado de $p$ es el conjunto de n-tuplas $\{(t_2, t_2, \dots, t_n) \in \mathscr{H}_\mathbb{L}^n \ / \ \mathscr{I} \vDash p(t_2, t_2, \dots, t_n)\}$, es decir, las tuplas $(t_2, t_2, \dots, t_n)$ de $\mathscr{H}_\mathbb{L}^n$ tales que la interpretación $\mathscr{I}$ hace verdadera a $p(t_2, t_2, \dots, t_n)$.
 
 Dado un conjunto de fórmulas cerradas $S$, los elementos lingüísticos involucrados en sus cláusulas, es decir, sus constantes, letras funcionales y predicativas, definen un lenguaje particular que se denomina el lenguaje de $S$.
-Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que es un modelo de $S$. Dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
-Dado un programa $P$, es posible identificar una interpretación de Herbrand de P con un subconjunto de los elementos de la Base de Herbrand de $P$. Dada una interpretación de Herbrand arbitraria $\mathscr{I}$ entonces el subconjunto de $\mathscr{B}_P$ correspondiente a esa interpretación, es el subconjunto de átomos fijos que son verdaderos en la interpretación $\mathscr{I}$.
+Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que al mismo tiempo es un modelo de $S$. Dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$. Se dice que una interpretación $\mathscr{I}$ es un modelo para un conjunto $S$ de fórmulas bien formadas en $P$, si todas las fórmulas bien formadas de $S$ son verdaderas en dicha interpretación $\mathscr{I}$.
+Dado un programa $P$, es posible identificar una interpretación de Herbrand de $P$ con un subconjunto de los elementos de la Base de Herbrand de $P$. Dada una interpretación de Herbrand arbitraria $\mathscr{I}$ entonces el subconjunto de $\mathscr{B}_P$ correspondiente a esa interpretación, es el subconjunto de átomos fijos que son verdaderos en la interpretación $\mathscr{I}$.
 Recíprocamente, dado un subconjunto arbitrario de $\mathscr{B}_P$ existe la correspondiente interpretación de Herbrand definida especificando que el mapeo asignado a una letra predicativa mapea una tupla de forma correcta, si el átomo con la misma letra predicativa y los mismos argumentos está en el subconjunto.
 Sea $P$ un programa definido y sea $\{M_i\}_{i \in \mathscr{I}}$ un conjunto no vacío de modelos de Herbarnd de $P$, entonces:
 $$M_p = \cap_{i \in \mathscr{I}} M_i$$
