--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/2. Resultados Metateoricos.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/2. Resultados Metateoricos.md
@@ -6,6 +6,6 @@ Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo o dominio de Her
 Sea $S$ un conjunto de cláusulas. Si $S$ es insatisfacible entonces $\perp \in \Re^n(S)$ para algún $n$, es decir si $\vDash ¬S$ entonces $\perp \in \Re^n(S)$. Esto se puede demostrar suponiendo que $S$ es insatisfacible, en ese caso existe un subconjunto finito $H$ de $\mathscr{H}_S$ que es insatisfacible. Este $H$ al ser un subconjunto de la saturación de $S$ por $\mathscr{H}_S$ está conformado por fórmulas bien formadas de $S$ saturadas con términos fijos de $\mathscr{H}_S$.  Sea $P$ dicho subconjunto de $\mathscr{H}_S$, entonces la saturación de $S$ por $P$ incluye a $H$ y por esta razón es también inconsistente.
 Este conjunto es un conjunto de cláusulas fijas, por tanto, para algún $n$ se cumple que $\perp \in \Re^n(S)$. Adicionalmente, apoyándonos del corolario anterior el cual afirma $\Re^n(P((S))) \subseteq P((\Re^n(S)))$, obtenemos que $\perp \in P((\Re^n(S)))$. Nótese que la operación de saturación no puede producir la cláusula vacía si $\perp \in P((\Re^n(S)))$, es decir, $\perp \in \Re^n(S)$.
 De forma similar y utilizando lemas adicionales se puede demostrar que si $S$ es refutable, es decir, $¬S \stackrel{*}{\longrightarrow} \perp$. Entonces $S$ es deducible ($\vdash S$).
-Mediante esta serie de teoremas y demostraciones probamos que $\mathcal{P}$ es sano, completo y consistente. Sin embargo, $\mathcal{P}$ no es decidible dado que el universo de Herbrand de un lenguaje puede ser infinito si contiene una constante y una letra funcional. Además, el procedimiento de computación que hemos desarrollado no provee un método de decisorio.
+Mediante esta serie de teoremas y demostraciones probamos que $\mathcal{P}$ es sano, completo y consistente. Sin embargo, $\mathcal{P}$ no es decidible dado que el universo de Herbrand de un lenguaje puede ser infinito si contiene al menos una constante y una letra funcional. Además, el procedimiento de computación que hemos desarrollado no provee un método de decisorio.
 El teorema de Herbrand asegura que si $S$ es un conjunto de cláusulas inconsistentes entonces $\mathscr{H}_S((S))$ contiene un subconjunto finito que es consistente, por lo tanto, se cumple que $\perp \in \Re^n(S)$ para algún $n$, no obstante no es posible establecer una cota superior para $n$. Esto significa que dado un teorema el procedimiento nos dirá que efectivamente es un teorema, pero dada una fórmula bien formada que no es un teorema es posible que el procedimiento termine diciéndonos que no lo es o puede continuar indefinidamente.
 Esto no significa que no exista un procedimiento de decisión, solo afirma que el método de resolución no lo es. Es decir, el procedimiento particular desarrollado no es decisorio y esta afirmación no establece que no exista uno. Sin embargo, es posible demostrar que efectivamente no existe la posibilidad de desarrollarlo. Este resultado negativo establece que para el Cálculo de Predicados no existe un procedimiento para decidir si una fórmula bien formada es o no un teorema.
